fix(scss): extending .button takes too long

--- a/assets/scss/swiss-components/components/_admin-table.scss
+++ b/assets/scss/swiss-components/components/_admin-table.scss
@@ -87,12 +87,12 @@
   @extend .has-text-right;
 
   .edit-draft {
-    @extend .button;
+    // @extend .button;
     @extend .is-small;
     @extend .is-info;
   }
   .discard-draft {
-    @extend .button;
+    // @extend .button;
     @extend .is-small;
     @extend .is-dark-info;
   }
