--- a/assets/scss/swiss-components/layouts/_layout-proposal.scss
+++ b/assets/scss/swiss-components/layouts/_layout-proposal.scss
@@ -113,20 +113,20 @@
       font-size: 1em;
     }
     .submit-proposal {
-      @extend .button;
+      // @extend .button;
       @extend .is-medium;
       @extend .is-info;
       @include proposal-submit-button;
     }
     .save-proposal {
-      @extend .button;
+      // @extend .button;
       @extend .is-medium;
       @extend .is-primary;
       @include proposal-submit-button;
     }
     .discard-proposal,
     .cancel-proposal {
-      @extend .button;
+      // @extend .button;
       @extend .is-medium;
       @extend .is-dark-info;
       @include proposal-submit-button;
